--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "toedoe-app",
-  "version": "0.0.0",
+  "name": "todo-app",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "install": "npm install --omit=dev",
     "start": "node server.js"
   },
   "dependencies": {
