--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,20 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '18'
-
     - name: Set up SSH
       uses: webfactory/ssh-agent@v0.5.3
       with:
         ssh-private-key: ${{ secrets.EC2_NEWKEY }}
 
-    - name: Install dependencies on EC2
+    - name: do all
       run: |
         ssh -o StrictHostKeyChecking=no ec2-user@13.210.154.160 << EOF
             PROJECT_DIR="/var/www"
